--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #35363b;
-    background-image: url(./bg.jpg);
+    background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
